[rel-4_0] Updated Hungarian translation

--- a/i18n/otrs/otrs.pot
+++ b/i18n/otrs/otrs.pot
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: OTRS\n"
-"POT-Creation-Date: 2017-09-12 09:26+0200\n"
+"POT-Creation-Date: 2017-12-14 21:05+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -10971,6 +10971,10 @@ msgid "Create New process ticket"
 msgstr ""
 
 #. SysConfig
+msgid "Create Ticket"
+msgstr ""
+
+#. SysConfig
 msgid "Create and manage Service Level Agreements (SLAs)."
 msgstr ""
 
@@ -15480,6 +15484,10 @@ msgstr ""
 
 #. SysConfig
 msgid "Ticket Queue Overview"
+msgstr ""
+
+#. SysConfig
+msgid "Ticket Zoom"
 msgstr ""
 
 #. SysConfig
