Change otrs to ligero texts

--- a/Custom/README
+++ b/Custom/README
@@ -1,5 +1,5 @@
 If you need to modify already existing framework Perl module files or tt template files
-or unit test files for customizations, you can do this in the $OTRS_HOME/Custom/ directory.
+or unit test files for customizations, you can do this in the $LIGERO_HOME/Custom/ directory.
 
 Example:
 
